--- a/principal/index.html
+++ b/principal/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jordan</title>
     <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/reponsivo.css">
 </head>
 <body>
     <div class="desconto">
@@ -74,7 +75,8 @@
 
 
 
-
-  
+    <div class="diretos-end">
+    <p id="direitos">Todos os direitos reservados.</p>
+    </div>
 </body>
 </html>
