--- a/principal/index.html
+++ b/principal/index.html
@@ -21,7 +21,7 @@
         
     <div class="texto-home">
         <h1>A Melhor loja de Jordan</h1>
-        <p>O tênis é Fruto de uma velha e forte<br>parceria entre a Nike e ojogador Michael Jordan</p>
+        <p>O tênis é Fruto de uma velha e forte<br>parceria entre a Nike e o jogador Michael Jordan</p>
     </div>
     </div>
     <div class="destaques">
@@ -48,7 +48,7 @@
     </div>
 
     <div class="box-tenis4">
-        <div class="tenis">
+        <div class="tenis-s">
             <img src="/img/4.png" alt="Jordan">
         </div>
   
