--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jordan</title>
-    <link rel="stylesheet" href="../index.css">
-    <link rel="stylesheet" href="../reponsivo.css">
+    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./reponsivo.css">
 </head>
 <body>
     <div class="desconto">
@@ -31,43 +31,43 @@
 <div class="catalogo">
     <div class="box-tenis1">
         <div class="tenis">
-            <img class="img-position" src="../img/1.png" alt="Jordan">
+            <img class="img-position" src="./img/1.png" alt="Jordan">
         </div>
     </div>
 
     <div class="box-tenis2">
         <div class="tenis">
-            <img class="img-position" src="../img/2.png" alt="Jordan">
+            <img class="img-position" src="./img/2.png" alt="Jordan">
         </div>
     </div>
     
     <div class="box-tenis3">
         <div class="tenis">
-            <img class="img-position" src="../img/3.png" alt="Jordan">
+            <img class="img-position" src="./img/3.png" alt="Jordan">
         </div>
     </div>
 
     <div class="box-tenis4">
         <div class="tenis-s">
-            <img class="img-position" src="../img/4.png" alt="Jordan">
+            <img class="img-position" src="./img/4.png" alt="Jordan">
         </div>
   
     </div>
     
     <div class="box-tenis5">
-        <img class="img-position" src="../img/5.png" alt="">
+        <img class="img-position" src="./img/5.png" alt="">
     </div>
 
     <div class="box-tenis6">
-        <img class="img-position" src="../img/6.png" alt="">
+        <img class="img-position" src="./img/6.png" alt="">
     </div>
 
     <div class="box-tenis7">
-        <img class="img-position" src="../img/7.png" alt="">
+        <img class="img-position" src="./img/7.png" alt="">
     </div>
 
     <div class="box-tenis8">
-        <img class="img-position" src="../img/8.png" alt="">
+        <img class="img-position" src="./img/8.png" alt="">
     </div>
 
 
